tests/requests/invalid/005.py
from gunicorn.ghttp.errors import InvalidHeaderName
request = InvalidHeaderName